style: fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -37,11 +37,20 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-
+  /* justify-content: space-between; */
+  
   height: 100%;
   width: 100%;
   gap: var(--component-gap-size);
+}
+
+.game-container {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: var(--component-gap-size);
+
+  width: 100%;
+  max-width: 500px;
 }
 
 /* Header */
@@ -296,6 +305,8 @@ body {
   justify-content: center;
   align-items: center;
 
+  padding: 0;
+
   /* width: 40px; */
   width: 100%;
   /* height: 100%; */
@@ -324,21 +335,6 @@ body {
 .bs-btn {
   flex-grow: 2;
   font-size: 13pt;
-}
-
-.app-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-}
-.game-container {
-  display: flex;
-  flex-flow: column nowrap;
-  gap: var(--component-gap-size);
-
-  width: 100%;
-  max-width: 500px;
 }
 
 @media (max-width: 502px) {
